# SwatNotes

./: .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.MD  PROJECT_ATLAS.md  README.md  about.html  eslint.config.js  index.html  package-lock.json  package.json  settings.html  sticky-note.html  tailwind.config.js  tsconfig.json  update-application.ps1  update-required.html  vite.config.js  vitest.config.ts  wdio.conf.cjs
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  BRANCHING.md  BUILD_FROM_SCRATCH.md  PRE_IMPLEMENTATION_CHECKLIST.md  PROGRESS.md  README.md  RELEASING.md  SUMMARY.md  TESTING.md
docs/chapters/: 00-the-map.md  01-first-principles.md  02-setting-up-your-environment.md  03-hello-tauri.md  04-understanding-the-stack.md  05-project-architecture.md  06-database-foundations.md  07-creating-notes.md  08-rich-text-editing.md  09-listing-and-searching.md  10-updating-and-deleting.md  11-state-management.md  12-frontend-architecture.md  13-file-attachments.md  14-encryption-fundamentals.md  15-backup-system.md  16-reminders-and-scheduling.md  17-system-integration.md  18-collections-and-organization.md  19-auto-update-system.md  20-error-handling-patterns.md  21-testing-strategies.md  22-building-and-distribution.md  23-performance-optimization.md  24-advanced-patterns.md  25-production-readiness.md
e2e/: README.md  app.spec.ts  collections.spec.ts  inline-images.spec.ts  notes.spec.ts  reminders.spec.ts  settings.spec.ts  wdio.d.ts  windows.spec.ts
e2e/reports/: index.html
e2e/test-results/: .last-run.json
pages/: about.html  index.html  settings.html  sticky-note.html
scripts/: update-application.ps1  verify.ps1
src/: about.ts  config.js  config.test.ts  config.ts  main.js  main.js.bak  main.ts  settings.ts  sticky-note.js  sticky-note.ts  types.ts  update-required.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: app.rs  commands.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  backup.rs  collections.rs  mod.rs  notes.rs  onenote.rs  reminders.rs  settings.rs  updater.rs  windows.rs
src-tauri/src/database/: mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/database/migrations/: 001_initial_schema.sql  002_add_title_modified.sql  003_add_fts.sql  004_add_collections.sql  005_add_reminder_settings.sql  mod.rs
src-tauri/src/platform/: mod.rs  registry.rs
src-tauri/src/services/: attachments.rs  backup.rs  credentials.rs  mod.rs  notes.rs  reminders.rs  scheduler.rs  settings.rs
src-tauri/src/storage/: blob_store.rs  mod.rs
src-tauri/tests/: integration_test.rs
src/components/: noteEditor.js  noteEditor.test.ts  noteEditor.ts  notesList.js  notesList.test.ts  notesList.ts
src/events/: handlers.js  handlers.ts
src/state/: appState.test.ts  appState.ts
src/styles/: main.css
src/ui/: backup.js  backup.test.ts  backup.ts  theme.js  theme.test.ts  theme.ts
src/utils/: attachmentsApi.js  attachmentsApi.test.ts  attachmentsApi.ts  backupApi.js  backupApi.test.ts  backupApi.ts  collectionsApi.test.ts  collectionsApi.ts  formatters.test.ts  formatters.ts  logger.test.ts  logger.ts  modal.test.ts  modal.ts  notesApi.js  notesApi.test.ts  notesApi.ts  notificationSound.ts  onenoteApi.ts  quillAttachmentBlots.ts  reminderSettingsApi.test.ts  reminderSettingsApi.ts  remindersApi.js  remindersApi.test.ts  remindersApi.ts  settings.test.ts  settings.ts  smartPaste.test.ts  smartPaste.ts  updateApi.test.ts  updateApi.ts
