[package]
name = "swatnotes"
version = "2.0.7"
description = "A production-grade desktop notes application"
authors = ["Swatto"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-notification = "2.3"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-updater = "2.10"
tauri-plugin-clipboard-manager = "2.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for update checks
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# XML parsing for OneNote import
quick-xml = "0.36"

# Credential storage (Windows only)
keyring = { version = "3", features = ["windows-native"] }
tokio-cron-scheduler = "0.13"

# Windows Registry access
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
